refactor: replace parcel with tsc & browserify

--- a/src/browser/pages/login.html
+++ b/src/browser/pages/login.html
@@ -49,6 +49,6 @@
       </div>
     </div>
   </body>
-  <script data-cfasync="false" src="{{CS_STATIC_BASE}}/dist/register.js"></script>
-  <script data-cfasync="false" src="{{CS_STATIC_BASE}}/dist/pages/login.js"></script>
+  <script data-cfasync="false" src="{{CS_STATIC_BASE}}/out/browser/register.browserified.js"></script>
+  <script data-cfasync="false" src="{{CS_STATIC_BASE}}/out/browser/login.browserified.js"></script>
 </html>
